--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "mojitoswap-sdk": "0.0.2",
     "normalize.css": "^8.0.1",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
