--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-transition-group": "^4.4.2",
     "react-use-localstorage": "^3.5.3",
     "redux-localstorage-simple": "^2.4.0",
+    "rss-parser": "^3.12.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
